--- a/config/config.yaml
+++ b/config/config.yaml
@@ -129,6 +129,8 @@ platforms:
     name: "知乎"
   - id: "hupu"
     name: "虎扑"
+  - id: "douban"
+    name: "豆瓣"
 
   # === 科技类平台 ===
   - id: "ithome"
